# pokemon-nimzo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPUS_PASS.md  README.md  ROADMAP.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
data/: gen3_movesets.json  natdex_movesets.json
docs/: op-02-architecture.md  op-02-research.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: smoke.spec.js
frontend/src/: App.jsx
frontend/src/components/: BattleAnalysis.jsx  BattleField.jsx  BattleLog.jsx  BattleReplay.jsx  BracketView.jsx  DraftPhase.jsx  EmptyState.jsx  GlobalStats.jsx  HPBar.jsx  Leaderboard.jsx  ModelStats.jsx  PokemonCard.jsx  PokemonTooltip.jsx  SeasonView.jsx  ShowdownBattleScene.jsx  ShowdownRenderSpike.jsx  TournamentView.jsx  battleChrome.jsx  battleShared.jsx
frontend/src/hooks/: useBattleStream.js  useShowdownBundle.js  useTooltip.js
frontend/src/styles/: main.css
scripts/: build_natdex_sets.py  leaderboard.py  run_battle.py  serve.py  start_showdown.sh  stop.sh  tournament.py
src/nidozo/: __init__.py
src/nidozo/analysis/: __init__.py  analyzer.py
src/nidozo/api/: __init__.py  app.py  events.py  helpers.py  lifespan.py  logging_config.py  middleware.py  models.py  orchestration.py  routes.py  ws.py  ws_showdown.py
src/nidozo/battle/: action_parser.py  draft.py  heuristics.py  llm_player.py  serializer.py  streaming_player.py  team_builder.py  tiers.py
src/nidozo/db/: __init__.py  schema.py  store.py
src/nidozo/llm/: __init__.py  anthropic.py  backend.py  coach.py  lesson_generator.py  narrator.py  openai.py  prompt_builder.py
src/nidozo/llm/prompts/coach/: system.txt  turn.txt.jinja
src/nidozo/llm/prompts/v1/: system.txt
src/nidozo/llm/prompts/v2/: system.txt
src/nidozo/llm/prompts/v3/: draft_system.txt  draft_turn.txt.jinja  system.txt  turn.txt.jinja
src/nidozo/llm/prompts/v4/: system.txt  turn.txt.jinja
src/nidozo/llm/prompts/v5/: system.txt  turn.txt.jinja
src/nidozo/tournament/: __init__.py  bracket.py
src/pokemon_nimzo/: __init__.py
src/pokemon_nimzo/analysis/: __init__.py  analyzer.py
src/pokemon_nimzo/api/: __init__.py  app.py
src/pokemon_nimzo/battle/: bots.py  llm_player.py  serializer.py  streaming_player.py
src/pokemon_nimzo/db/: __init__.py  elo.py  schema.py  store.py
src/pokemon_nimzo/llm/: __init__.py  anthropic.py  openai.py  prompt_builder.py
src/pokemon_nimzo/llm/prompts/v1/: turn.txt.jinja
tests/: test_action_parser.py  test_analyzer.py  test_api.py  test_app.py  test_bracket.py  test_coach.py  test_elo.py  test_events.py  test_healthz.py  test_helpers.py  test_heuristics.py  test_lessons.py  test_llm_backend.py  test_llm_player.py  test_orchestration_background.py  test_orchestration_cancel.py  test_orchestration_narrative.py  test_orchestration_teardown.py  test_prompt_builder.py  test_schema.py  test_serializer.py  test_store.py  test_streaming_player.py  test_tiers.py  test_ws.py  test_ws_showdown.py  test_ws_showdown_integration.py
