[project]
name = "nidozo"
version = "0.1.0"
description = "LLM vs LLM Pokémon battle arena powered by Pokémon Showdown and poke-env"
requires-python = ">=3.12"
dependencies = [
    "poke-env>=0.8.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "jinja2>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nidozo"]
