[project]
name = "nidozo"
version = "0.1.0"
description = "LLM vs LLM Pokémon battle arena powered by Pokémon Showdown and poke-env"
requires-python = ">=3.12"
dependencies = [
    "poke-env>=0.8.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "jinja2>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",          # API tests via ASGITransport
    "ruff>=0.9",            # linting
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long — handled by formatter if needed
    "B008",  # do not perform function calls in argument defaults (FastAPI uses this)
    "UP007", # X | Y union syntax — keep Optional[] for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert is fine in tests

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nidozo"]
